--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="./game.js" defer></script>
 </head>
 <body>
-    
+    <h1>Rock - Paper - Scissors</h1>
+    <div id="buttons-container">
+        <button id="rock"></button>
+        <button id="paper"></button>
+        <button id="scissors"></button>
+    </div>
 </body>
 </html>
