--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
     <h1>Rock - Paper - Scissors</h1>
     <div id="buttons-container">
-        <button id="rock"></button>
-        <button id="paper"></button>
-        <button id="scissors"></button>
+        <button id="rock">rock</button>
+        <button id="paper">paper</button>
+        <button id="scissors">scissors</button>
     </div>
 </body>
 </html>
