Add instructions paragraph

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>Rock - Paper - Scissors</h1>
+    <p id="instructions">Let's play rock, paper, scissors. You will be competing against the computer. Make your selection by clicking one of the buttons below. First one to 5 wins...wins!</p>
     <div id="buttons-container">
         <button id="rock">rock</button>
         <button id="paper">paper</button>
