--- a/index.html
+++ b/index.html
@@ -15,5 +15,9 @@
         <button id="paper">paper</button>
         <button id="scissors">scissors</button>
     </div>
+    <div id="score">
+        <div id="playerScore">Your score:</div>
+        <div id="computerScore">Computer's score</div>
+    </div>
 </body>
 </html>
