Add roundResult div

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <button id="paper">paper</button>
         <button id="scissors">scissors</button>
     </div>
+    <div id="roundResult"></div>
     <div id="score">
         <div id="playerScore">Your score:</div>
         <div id="computerScore">Computer's score</div>
