Add initial scores

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </div>
     <div id="roundResult"></div>
     <div id="score">
-        <div id="playerScore">Your score:</div>
-        <div id="computerScore">Computer's score</div>
+        <div id="playerScore">Your score: 0</div>
+        <div id="computerScore">Computer's score: 0</div>
     </div>
 </body>
 </html>
