Add divs to HTML

--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Rock - Paper - Scissors</h1>
-    <p id="instructions">Let's play rock, paper, scissors. You will be competing against the computer. Make your selection by clicking one of the buttons below. First one to 5 wins...wins!</p>
+    <div class="content">
+        <div id="title">
+            <h1>Rock - Paper - Scissors</h1>
+        </div>
+        <div id="instructions">
+            <p id="instructions">Let's play rock, paper, scissors. You will be competing against the computer. Make your selection by clicking one of the buttons below. First one to 5 wins...wins!</p>
+        </div>
     <div id="buttons-container">
         <button id="rock">rock</button>
         <button id="paper">paper</button>
@@ -21,5 +26,6 @@
         <div id="playerScore">Your score: 0</div>
         <div id="computerScore">Computer's score: 0</div>
     </div>
+</div>
 </body>
 </html>
