Add class to round results

--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         <button id="paper">paper</button>
         <button id="scissors">scissors</button>
     </div>
-    <div id="roundResult">The round result will be displayed here. Good luck!</div>
-    <div id="score">
-        <div id="playerScore">Your score: 0</div>
-        <div id="computerScore">Computer's score: 0</div>
+    <div class="results" id="roundResult">The round result will be displayed here. Good luck!</div>
+    <div class="results" id="score">
+        <div class="results" id="playerScore">Your score: 0</div>
+        <div class="results" id="computerScore">Computer's score: 0</div>
     </div>
 </div>
 </body>
