Add restart button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
         <div class="results" id="playerScore">Your score: 0</div>
         <div class="results" id="computerScore">Computer's score: 0</div>
     </div>
+    <div id="reset-button">
+        <button id="reset">Restart Game</button>
+    </div>
 </div>
 </body>
 </html>
