Add choicebuttons to RPS

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
             <p id="instructions">Let's play rock, paper, scissors. You will be competing against the computer. Make your selection by clicking one of the buttons below. First one to 5 wins...wins!</p>
         </div>
     <div id="buttons-container">
-        <button id="rock">rock</button>
-        <button id="paper">paper</button>
-        <button id="scissors">scissors</button>
+        <button class="choicebutton" id="rock">rock</button>
+        <button class="choicebutton" id="paper">paper</button>
+        <button class="choicebutton" id="scissors">scissors</button>
     </div>
     <div class="results" id="roundResult">The round result will be displayed here. Good luck!</div>
     <div class="results" id="score">
